2012-11-28  Oleg Raikhman  <oleg@adapteva.com>

	* config/epiphany/epiphany.h (ASM_OUTPUT_ALIGN_WITH_NOP): Define.

2012-11-28  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/epiphany/epiphany.h (HARD_REGNO_RENAME_OK): Define.
	* config/epiphany/epiphany-protos.h (epiphany_regno_rename_ok): Declare.
	* config/epiphany/epiphany.c (epiphany_regno_rename_ok): New function.

	* config/epiphany/epiphany.md (mov<mode>, *mov<mode>_insn): Check
	for misaligned memory operands.
	* config/epiphany/predicates.md (misaligned_operand): New predicate.

	* config/epiphany/epiphany.opt (-may-round-for-trunc): New option.
	* config/epiphany/epiphany.md (*fix_truncsfsi2_i): Take it into account.

2012-11-28  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/54547
	* tree-vrp.c (set_and_canonicalize_value_range): Handle
	1-bit anti-ranges explicitely.
	(extract_range_from_assert): Properly canonicalize all
	built anti-ranges.

2012-11-28  Eric Botcazou  <ebotcazou@adacore.com>

	* stor-layout.c (layout_type) <ARRAY_TYPE>: Do not clear TREE_OVERFLOW
	on overflowed zeroes, except in one specific case.

2012-11-28  Marc Glisse  <marc.glisse@inria.fr>

	PR middle-end/55266
	* fold-const.c (fold_ternary_loc) [BIT_FIELD_REF]: Handle
	CONSTRUCTOR with vector elements.
	* tree-ssa-propagate.c (valid_gimple_rhs_p): Handle CONSTRUCTOR
	and BIT_FIELD_REF.

2012-11-28  Richard Biener  <rguenther@suse.de>

	PR c/35634
	* gimple.h (gimplify_self_mod_expr): Declare.
	* gimplify.c (gimplify_self_mod_expr): Export.  Take a different
	type for performing the arithmetic in.
	(gimplify_expr): Adjust.
	* tree-vect-loop-manip.c (vect_can_advance_ivs_p): Strip
	sign conversions we can re-apply after adjusting the IV.

2012-11-28  Steven Bosscher  <steven@gcc.gnu.org>

	PR rtl-optimization/55006
	* loop-unroll.c (struct iv_to_split): Add new 'orig_var' member.
	(analyze_iv_to_split_insn): Record it.
	(maybe_strip_eq_note_for_split_iv): New function to remove REG_EQUAL