@@ -164,6 +164,9 @@
 (define_predicate "move_double_src_operand"
   (match_code "reg,subreg,mem,const_int,const_double,const_vector")
 {
+  if (GET_CODE (op) == MEM && misaligned_operand (op, mode)
+      && !address_operand (plus_constant (XEXP (op, 0), 4), SImode))
+    return 0;
   return general_operand (op, mode);
 })
 
@@ -188,6 +191,9 @@
 	  return register_operand (op, mode);
 	}
     case MEM :
+      if (GET_MODE_SIZE (mode) == 8 && misaligned_operand (op, mode)
+	  && !address_operand (plus_constant (XEXP (op, 0), 4), SImode))
+	return 0;
       return address_operand (XEXP (op, 0), mode);
     default :
       return 0;
